# zclaw-ext

./: CHANGELOG.md  README.md
components/aw9523b/: CMakeLists.txt  README.md  aw9523b.c
components/axp2101/: CMakeLists.txt  README.md  axp2101.c
components/ft6x36/: CMakeLists.txt  README.md  ft6x36.c
components/igpio/: CMakeLists.txt  README.md  igpio_espidf.c
components/ii2c/: CMakeLists.txt  README.md  ii2c_espidf.c
components/ili9342/: CMakeLists.txt  ili9342.c
components/ispi/: CMakeLists.txt  README.md  ispi_espidf.c
docs-site/: README.html  changelog.html  email-bridge.html  getting-started.html  local-admin.html  tools.html
docs-site/reference/: README_COMPLETE.md
main/: CMakeLists.txt  Kconfig.projbuild  agent.c  boot_guard.c  boot_guard.h  builtin_tools.def  config.h  json_util.c  json_util.h  llm.c  llm.h  local_admin.c  local_admin.h  main.c  nvs_keys.h  tools.c  tools_common.c  tools_cores3.c  tools_email.c  tools_gpio.c  tools_handlers.h
main/cores3/: app.c  app.h  cores3_board.c  cores3_board.h  cores3_board_constants.h  cores3_io_extender.c  cores3_io_extender.h  cores3_power_mgmt.c  cores3_power_mgmt.h  cores3_touch.c  cores3_touch.h  gui_app.c  gui_app.h
main/cores3/display/: cores3_display.c  cores3_display.h
main/cores3/graphics/: bitmap_icon.c  bitmap_icon.h  bmf_reader.c  bmf_reader.h  display_surface.c  display_surface.h  render_support.c  render_support.h  text_renderer.c  text_renderer.h
main/cores3/graphics/fonts/: open_sans_regular_16_4bpp.h  open_sans_regular_32_4bpp.h
main/cores3/graphics/icons/: icon_battery_charging.h  icon_battery_full.h  icon_battery_half.h  icon_battery_low.h  icon_reboot_4bpp.h  icon_usb_4bpp.h  icon_wifi_connected_4bpp.h  icon_wifi_disconnected_4bpp.h  wifi_16_mask_1bpp.h
scripts/: emulate.sh  provision-dev.sh  provision.sh  test.sh
test/api/: provider_harness.py
test/host/: test_agent.c  test_api_provider_harness.py  test_install_provision_scripts.py  test_json_util_integration.c  test_llm_runtime.c  test_local_admin_wifi_runtime.c  (+2 more)
(+10 files in other folders)
